fix: fix song position on small screens

--- a/songbird/src/styles/components/_song.scss
+++ b/songbird/src/styles/components/_song.scss
@@ -3,10 +3,11 @@
   grid-template-columns: 150px 1fr;
   grid-template-rows: auto;
   gap: var(--spacer-400);
-  grid-template-areas: "cover cover" "title title" "player player";
+  grid-template-areas: "cover cover" "game-title game-title" "song-title song-title" "player player";
   border: 5px solid var(--clr-accent);
   padding: var(--spacer-400);
-  align-items: start;
+  align-items: center;
+  justify-items: center;
 
   @media (min-width: 560px) {
     justify-items: start;
@@ -14,6 +15,7 @@
   }
 
   &--full {
+    justify-items: center;
     grid-template-areas: "cover cover" "game-title game-title" "song-title song-title""player player" "description description";
 
     @media screen and (min-width: 1080px) {
